--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.3",
     "moment": "^2.29.4",
     "onscan.js": "^1.5.2",
     "react": "^18.2.0",
